--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,6 @@
     "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
-    "uuid": "^8.3.2",
-    
+    "uuid": "^8.3.2"
   }
 }
