--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "libreoffice-convert": "^1.3.5",
     "mongoose": "^5.13.13",
     "multer": "^1.4.2",
     "passport": "^0.5.2",
