--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "clamscan": "^2.1.2",
+    "convertapi": "^1.11.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
@@ -21,6 +22,7 @@
     "libreoffice-convert": "^1.3.5",
     "mongoose": "^5.13.13",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
