--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "libreoffice-convert": "^1.3.5",
     "mongoose": "^5.13.13",
     "multer": "^1.4.2",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
