--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-zip": "^3.0.0",
     "libreoffice-convert": "^1.3.5",
     "mongoose": "^5.13.13",
     "multer": "^1.4.2",
